<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:gravity="center_horizontal"
        android:background="@drawable/background"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_step2"
            android:id="@+id/textView_step2"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textSize="50dp"
            android:padding="10dp"
            android:textColor="#ff000000" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="480dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_step2explain"
            android:id="@+id/textView_step3explain"
                android:padding="8dp"
                android:textColor="#ff000000" />



            <ImageView
                android:contentDescription="@string/descript_step2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView"
                android:src="@drawable/eulen" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_done"
                android:alpha="1"
                android:id="@+id/buttonDone"
                android:layout_gravity="center_horizontal"
                android:onClick="doneButton"
                android:singleLine="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>