<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbarLogin"
    android:layout_height="@dimen/toolbar_height"
    android:layout_width="match_parent"
    android:minHeight="@dimen/toolbar_height"
    android:background="@color/ltgray"
    android:theme="@style/AppTheme"
    android:popupTheme="@style/AppTheme"
    android:elevation="5dp"
    android:clickable="true"
    android:gravity="center_vertical">
</android.support.v7.widget.Toolbar>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.tomkowapp.eulen.register$PlaceholderFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_passphrase"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textPassLogin" />

            <EditText
                android:layout_width="match_parent"
                android:maxWidth="480dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPassphraseLogin"
                android:maxLength="@integer/passphrase_length" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_remember"
                android:id="@+id/checkRemember"
                android:enabled="false"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_pin"
                android:id="@+id/textPinLogin" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:id="@+id/editTextPinLogin"
                android:maxLength="@integer/pin_length"
                android:gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/button"
                    android:text="@string/button_login"
                    android:id="@+id/buttonLogin"
                    android:layout_gravity="center_horizontal"
                    android:onClick="loginButton" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/button"
                    android:id="@+id/buttonClear"
                    android:text="@string/button_clear"
                    android:onClick="clearButton" />


            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:gravity="center_vertical|center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="480dp"
                    android:text="@string/title_NFC_login"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textNFCLogin"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>